2007-05-10  Marc Singer  <elf@buici.com>

	* Releasing 1.5.0 with iMX31 and OneNAND.

2007-05-10  Marc Singer  <elf@zealous.synapsedev.com>

	* src/drivers/relocate-onenand.c: Groomed the relocation for
	OneNAND to remove unneeded return address calculation.

	* src/drivers/drv-dm9000.c: Added code to help select the proper
	default interface when there could be two and only one is present.

	* src/mach-mx3/initialize.c: Groomed the startup code to remove
	much cruft.

	* src/apex/env.c: Fixed typo in the default environment startup
	command that was including the ramdisk startup even though there
	was none needed.

2007-05-10  Marc Singer  <elf@cerise.buici.com>

	* src/apex/command.c (call_command): Reorganized command
	invocation to report bogus command requests.

2007-05-09  Marc Singer  <elf@zealous.synapsedev.com>

	* src/arch-arm/entry/apex.lds.S: Start of reorganization of the
	bootstrap so that we don't need to use function calls to handle
	early setup *and* we don't depend on macros.

2007-05-07  Marc Singer  <elf@zealous.synapsedev.com>

	* src/drivers/relocate-onenand.c: Implementation of OneNAND
	APEX relocation for bootstrap.

	* src/apex/env.c: Improved the environment link so that it can
	exist even if there is no user-modifiable environment.  This is to
	allow user-land to browse environment variables even if they
	cannot set them.

	* src/mach-lh7a40x/preinitialization-companion.c: Comment on
	preinitialization.

2007-05-04  Marc Singer  <elf@zealous.synapsedev.com>

	* src/mach-mx3/ipu.c (cmd_ipu): Fixed the i2c code and added hooks
	to enable camera test patterns.

	* src/mach-mx3/initialize.c: Substantially enhanced the system
	setup.  The IPU test code is now able to write to memory.

	* src/apex/cmd-version.c (cmd_version): Added target board
	description string.

2007-04-30  Marc Singer  <elf@zealous.synapsedev.com>

	* src/mach-mx3/initialize.c: Extra check in the initialization